--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -4,6 +4,8 @@
       <h1>Login</h1>
       <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@example.com</code> / <code>test</code></p>
       <p>Admin account is <code>admin@example.com</code> / <code>admin</code></p>
+      <p>Organizer account is <code>elena@example.com</code> / <code>elena</code></p>
+      <p>Volunteer account is <code>peter@example.com</code> / <code>peter</code></p>
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="vm.login(form)" novalidate>
