Adding file upload to upload route

--- a/client/app/upload/upload.html
+++ b/client/app/upload/upload.html
@@ -1,1 +1,11 @@
-<div>This is the upload view.</div>
+<div class="panel panel-default upload">
+  <div class="panel-body">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputFile">Upload your volunteer CSV file: </label>
+        <input type="file" id="exampleInputFile">
+      </div>
+      <button type="submit" class="btn btn-default">Upload</button>
+    </form>
+  </div>
+</div>
