--- a/client/index.html
+++ b/client/index.html
@@ -74,21 +74,25 @@
     <!-- build:js(.tmp) app/app.js -->
       <script src="app/app.js"></script>
       <!-- injector:js -->
-      <script src="components/auth/auth.module.js"></script>
       <script src="app/admin/admin.module.js"></script>
+      <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/account/signup/signup.controller.js"></script>
+      <script src="app/volunteer/volunteer.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/file/file.directive.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/upload/Upload.service.js"></script>
+      <script src="app/upload/papaparse.js"></script>
+      <script src="app/upload/papaparse.min.js"></script>
       <script src="app/upload/upload.controller.js"></script>
       <script src="app/upload/upload.js"></script>
-      <script src="app/volunteer/volunteer.controller.js"></script>
-      <script src="app/volunteer/volunteer.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/volunteer/volunteer.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -101,8 +105,18 @@
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
       <script src="components/socket/socket.service.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="app/account/signup/signup.controller.js"></script>
       <script src="components/util/util.service.js"></script>
+      <script>
+        document.getElementById('fileinput').addEventListener('change', function(){
+          var file = this.files[0];
+          // This code is only for demo ...
+          console.log("name : " + file.name);
+          console.log("size : " + file.size);
+          console.log("type : " + file.type);
+          console.log("date : " + file.lastModified);
+        }, false);
+      </script>
       <!-- endinjector -->
     <!-- endbuild -->
   </body>
