Adding volunteer factory and listing

--- a/client/index.html
+++ b/client/index.html
@@ -90,6 +90,7 @@
       <script src="app/upload/papaparse.min.js"></script>
       <script src="app/upload/upload.controller.js"></script>
       <script src="app/upload/upload.js"></script>
+      <script src="app/volunteer/Volunteer.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
       <script src="app/volunteer/volunteer.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
