--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -1,1 +1,8 @@
-<div>This is the volunteer view: {{ message }}</div>
+<div class="container">
+  <div class="list-group">
+    <div class="list-group-item list-group-item-info">List of all volunteers:</div>
+    <a href="" class="list-group-item" ng-repeat="volunteer in volunteerCtrl.data">
+      {{ volunteer.firstName }} {{ volunteer.lastName }}
+    </a>
+  </div>
+</div>
