Clickable detail view

--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="list-group">
-    <div class="list-group-item list-group-item-info">Volunteer Info:</div>
+    <div class="list-group-item list-group-item-info">Volunteer Info:
+    <div class="pull-right"><a href="/volunteers">Back to volunteer list</a></div></div>
     {{ volunteerCtrl.data[0].firstName }}
   </div>
 </div>
