--- a/client/index.html
+++ b/client/index.html
@@ -22,9 +22,9 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/job/job.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/upload/upload.css">
-      <link rel="stylesheet" href="app/volunteer.detail/volunteer.detail.css">
       <link rel="stylesheet" href="app/volunteer/volunteer.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -78,21 +78,24 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/volunteer/volunteer.controller.js"></script>
+      <script src="app/upload/upload.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/file/file.directive.js"></script>
+      <script src="app/job/Job.service.js"></script>
+      <script src="app/job/job.controller.js"></script>
+      <script src="app/job/job.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
       <script src="app/upload/papaparse.min.js"></script>
       <script src="app/upload/upload.controller.js"></script>
-      <script src="app/upload/upload.js"></script>
-      <script src="app/volunteer/Volunteer.service.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/volunteer/Volunteer.service.js"></script>
+      <script src="app/volunteer/volunteer.controller.js"></script>
       <script src="app/volunteer/volunteer.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
