--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -3,6 +3,7 @@
     <div class="list-group-item list-group-item-info">Volunteer Info:
     <div class="pull-right"><a href="/volunteers">Back to volunteer list</a></div></div>
     {{ volunteerCtrl.volunteer.firstName }} {{ volunteerCtrl.volunteer.lastName }}
+    <br/>
     <br/>Address:
     <br/>{{ volunteerCtrl.volunteer.street1 }} {{ volunteerCtrl.volunteer.street2 }}
     <br/>{{ volunteerCtrl.volunteer.city }}, {{ volunteerCtrl.volunteer.state }} {{ volunteerCtrl.volunteer.zip }}
@@ -12,6 +13,49 @@
     <br/>
     <br/>Phone: {{ volunteerCtrl.volunteer.phone }}
     <br/>Work Phone: {{ volunteerCtrl.volunteer.workPhone }}
+    <br/>Email: {{ volunteerCtrl.volunteer.email }}
+    <br/>Fax: {{ volunteerCtrl.volunteer.fax }}
+    <br/>
+    <br/>Association Experience: {{ volunteerCtrl.volunteer.assocExp }}
+    <br/>Coach Experience: {{ volunteerCtrl.volunteer.coachExp }}
+    <br/>Member Experience: {{ volunteerCtrl.volunteer.memberExp }}
+    <br/>
+    <br/>Username: {{ volunteerCtrl.volunteer.username }}
+    <br/>Password: {{ volunteerCtrl.volunteer.password }}
+    <br/>
+    <br/>Current Job: {{ volunteerCtrl.volunteer.current }}
+    <br/>Job Preference #1: {{ volunteerCtrl.volunteer.jobPreference1 }}
+    <br/>Job Preference #2: {{ volunteerCtrl.volunteer.jobPreference2 }}
+    <br/>
+    <br/>Membership Number: {{ volunteerCtrl.volunteer.membershipNumber }}
+    <br/>Problem: {{ volunteerCtrl.volunteer.problem }}
+    <br/>Division: {{ volunteerCtrl.volunteer.division }}
+    <br/>
+    <br/>Submit Date: {{ volunteerCtrl.volunteer.submitDate }}
+    <br/>Last Modified: {{ volunteerCtrl.volunteer.lastModified }}
+    <br/>
+    <br/>School Membership: {{ volunteerCtrl.volunteer.mName }}
+    <br/>Region Membership: {{ volunteerCtrl.volunteer.mRegion }}
+    <br/>Child's Team: {{ volunteerCtrl.volunteer.childTeam }}
+    <br/>
+    <br/>Coach: {{ volunteerCtrl.volunteer.coachName }} ({{ volunteerCtrl.volunteer.coachEmail }})
+    <br/>
+    <br/>T Shirt Size: {{ volunteerCtrl.volunteer.tshirtSize }}
+    <br/>
+    <br/>Position Held: {{ volunteerCtrl.volunteer.positionHeld }}
+    <br/>
+    <br/>Comment: {{ volunteerCtrl.volunteer.comment }}
+    <br/>
+    <br/>Postions Volunteer Has Held:
+    <br/>Position One: {{ volunteerCtrl.volunteer.certP1 }}
+    <br/>Position Two: {{ volunteerCtrl.volunteer.certP2 }}
+    <br/>Position Three: {{ volunteerCtrl.volunteer.certP3 }}
+    <br/>Position Four: {{ volunteerCtrl.volunteer.certP4 }}
+    <br/>Position Five: {{ volunteerCtrl.volunteer.certP5 }}
+    <br/>Score Keeper: {{ volunteerCtrl.volunteer.certScore }}
+    <br/>Spontaneous Verbal: {{ volunteerCtrl.volunteer.certSpont }}
+
+
 
   </div>
 </div>
