A small bit of client-sided error handling

--- a/client/app/job/job-create.html
+++ b/client/app/job/job-create.html
@@ -2,6 +2,7 @@
   <div class="panel-heading">Create a job:</div>
   <div class="panel-body">
     Create a job here. These are jobs that will later be used to create time slots for the schedule. <br /><br />
+    {{ jobCtrl.errorMessage }}
     <form>
       <div class="form-group">
         <label for="jobtitle">Job Title</label>
