--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -46,6 +46,7 @@
     <br/>
     <br/>Comment: {{ volunteerCtrl.volunteer.comment }}
     <br/>
+    <br/>Are they a judge? {{ volunteerCtrl.volunteer.isJudge }}
 
   </div>
 </div>
