Updating HTML and CSS to all match

--- a/client/app/job/job.html
+++ b/client/app/job/job.html
@@ -1,8 +1,8 @@
-<div class="job-container">
+<div class="panel panel-default volunteer-container">
+  <div class="panel-heading">List of all jobs:
+    <div class="pull-right"><a href="/jobs/create">Add a job</a></div>
+  </div>
   <div class="list-group">
-    <div class="list-group-item list-group-item-info">List of all jobs:
-      <div class="pull-right"><a href="/jobs/create">Add a job</a></div>
-    </div>
     <a ng-href="" class="list-group-item" ng-repeat="job in jobCtrl.data">
       <strong>Job title</strong>: {{ job.title }} <br />
       <strong>Description</strong>: {{ job.description }}
