--- a/client/app/volunteer/volunteer-detail.html
+++ b/client/app/volunteer/volunteer-detail.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="volunteer-container">
   <div class="panel panel-default">
-    <div class="list-group-item list-group-item-info">Volunteer Info:
+    <div class="panel-heading">Volunteer Info:
     <div class="pull-right"><a href="/volunteers">Back to volunteer list</a></div></div>
     {{ volunteerCtrl.volunteer.firstName }} {{ volunteerCtrl.volunteer.lastName }}
     <br/>
