--- a/client/app/volunteer/volunteer.html
+++ b/client/app/volunteer/volunteer.html
@@ -1,8 +1,8 @@
-<div class="container">
+<div class="panel panel-default volunteer-container">
+  <div class="panel-heading">List of all volunteers:
+    <div class="pull-right"><a href="/volunteers/create">Add a volunteer</a></div>
+  </div>
   <div class="list-group">
-    <div class="list-group-item list-group-item-info">List of all volunteers:
-      <div class="pull-right"><a href="/volunteers/create">Add a volunteer</a></div>
-    </div>
     <a ng-href="/volunteers/{{volunteer._id}}" class="list-group-item" ng-repeat="volunteer in volunteerCtrl.data">
       {{ volunteer.firstName }} {{ volunteer.lastName }}
     </a>
