Adding time slot route and endpoint

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/job/job.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/slot/slot.css">
       <link rel="stylesheet" href="app/upload/upload.css">
       <link rel="stylesheet" href="app/volunteer/volunteer.css">
       <link rel="stylesheet" href="components/footer/footer.css">
@@ -78,7 +79,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/upload/upload.js"></script>
+      <script src="app/upload/upload.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -89,11 +90,13 @@
       <script src="app/job/job.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
+      <script src="app/slot/slot.controller.js"></script>
+      <script src="app/slot/slot.js"></script>
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
       <script src="app/upload/papaparse.min.js"></script>
-      <script src="app/upload/upload.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/upload/upload.js"></script>
       <script src="app/volunteer/Volunteer.service.js"></script>
       <script src="app/volunteer/volunteer.controller.js"></script>
       <script src="app/volunteer/volunteer.js"></script>
