--- a/client/index.html
+++ b/client/index.html
@@ -80,8 +80,9 @@
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
       <script src="app/upload/upload.controller.js"></script>
+      <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
-      <script src="app/account/account.js"></script>
+      <script src="app/slot/Slot.service.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/file/file.directive.js"></script>
@@ -95,12 +96,12 @@
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
       <script src="app/upload/papaparse.min.js"></script>
-      <script src="app/account/login/login.controller.js"></script>
+      <script src="app/account/account.js"></script>
       <script src="app/upload/upload.js"></script>
       <script src="app/volunteer/Volunteer.service.js"></script>
       <script src="app/volunteer/volunteer.controller.js"></script>
       <script src="app/volunteer/volunteer.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -113,7 +114,7 @@
       <script src="components/oauth-buttons/oauth-buttons.controller.js"></script>
       <script src="components/oauth-buttons/oauth-buttons.directive.js"></script>
       <script src="components/socket/socket.service.js"></script>
-      <script src="app/account/signup/signup.controller.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
