Adding job title by searching for job ID

--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -4,7 +4,7 @@
   </div>
   <div class="list-group">
     <a ng-href="" class="list-group-item" ng-repeat="slot in slotCtrl.data">
-      <strong>Job title</strong>: {{ slot.jobID }} <br />
+      <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
       <strong>Start time</strong>: {{ slot.start }} <br />
       <strong>End time</strong>: {{ slot.end }} <br />
       <strong>Volunteers needed</strong>: {{ slot.volunteersNeeded }} <br />
