making submit button work for volunteer add

--- a/client/app/volunteer/volunteer-create.html
+++ b/client/app/volunteer/volunteer-create.html
@@ -8,137 +8,137 @@
 </div>
 <div class="form-group">
   <label for="assoc">Assoc:</label>
-  <input type="text" class="form-control" id="assoc">
+  <input type="text" class="form-control" id="assoc" ng-model="volunteerCtrl.assoc">
 </div>
 <div class="form-group">
   <label for="street1">Street 1:</label>
-  <input type="text" class="form-control" id="street1">
+  <input type="text" class="form-control" id="street1" ng-model="volunteerCtrl.street1">
 </div>
 <div class="form-group">
   <label for="street2">Street 2:</label>
-  <input type="text" class="form-control" id="street2">
+  <input type="text" class="form-control" id="street2" ng-model="volunteerCtrl.street2">
 </div>
 <div class="form-group">
   <label for="city">City:</label>
-  <input type="text" class="form-control" id="city">
+  <input type="text" class="form-control" id="city" ng-model="volunteerCtrl.city">
 </div>
 <div class="form-group">
   <label for="state">State:</label>
-  <input type="text" class="form-control" id="state">
+  <input type="text" class="form-control" id="state" ng-model="volunteerCtrl.state">
 </div>
 <div class="form-group">
   <label for="zip">Zip:</label>
-  <input type="text" class="form-control" id="zip">
+  <input type="text" class="form-control" id="zip" ng-model="volunteerCtrl.zip">
 </div>
 <div class="form-group">
-  <label for="country">country:</label>
-  <input type="text" class="form-control" id="country">
+  <label for="country">Country:</label>
+  <input type="text" class="form-control" id="country" ng-model="volunteerCtrl.country">
 </div>
 <div class="form-group">
   <label for="region">Region:</label>
-  <input type="text" class="form-control" id="region">
+  <input type="text" class="form-control" id="region" ng-model="volunteerCtrl.region">
 </div>
 <div class="form-group">
   <label for="phone">Phone:</label>
-  <input type="text" class="form-control" id="phone">
+  <input type="text" class="form-control" id="phone" ng-model="volunteerCtrl.phone">
 </div>
 <div class="form-group">
   <label for="workPhone">Work Phone:</label>
-  <input type="text" class="form-control" id="workPhone">
+  <input type="text" class="form-control" id="workPhone" ng-model="volunteerCtrl.workPhone">
 </div>
 <div class="form-group">
   <label for="email">Email:</label>
-  <input type="text" class="form-control" id="email">
+  <input type="text" class="form-control" id="email" ng-model="volunteerCtrl.email">
 </div>
 <div class="form-group">
   <label for="fax">Fax:</label>
-  <input type="text" class="form-control" id="fax">
+  <input type="text" class="form-control" id="fax" ng-model="volunteerCtrl.fax">
 </div>
 <div class="form-group">
   <label for="assocExp">Associaton Experience:</label>
-  <input type="text" class="form-control" id="assocExp">
+  <input type="text" class="form-control" id="assocExp" ng-model="volunteerCtrl.assocExp">
 </div>
 <div class="form-group">
   <label for="coachExp">Coach Experience:</label>
-  <input type="text" class="form-control" id="coachExp">
+  <input type="text" class="form-control" id="coachExp" ng-model="volunteerCtrl.coachExp">
 </div>
 <div class="form-group">
   <label for="memberExp">Member Experience:</label>
-  <input type="text" class="form-control" id="memberExp">
+  <input type="text" class="form-control" id="memberExp" ng-model="volunteerCtrl.memberExp">
 </div>
 <div class="form-group">
   <label for="username">Username:</label>
-  <input type="text" class="form-control" id="username">
+  <input type="text" class="form-control" id="username" ng-model="volunteerCtrl.username">
 </div>
 <div class="form-group">
   <label for="password">Password:</label>
-  <input type="text" class="form-control" id="password">
+  <input type="text" class="form-control" id="password" ng-model="volunteerCtrl.password">
 </div>
 <div class="form-group">
   <label for="current">Current:</label>
-  <input type="text" class="form-control" id="current">
+  <input type="text" class="form-control" id="current" ng-model="volunteerCtrl.current">
 </div>
 <div class="form-group">
   <label for="jobPreference1">Job Preference 1:</label>
-  <input type="text" class="form-control" id="jobPreference1">
+  <input type="text" class="form-control" id="jobPreference1" ng-model="volunteerCtrl.jobPreference1">
 </div>
 <div class="form-group">
   <label for="jobPreference2">Job Preference 2:</label>
-  <input type="text" class="form-control" id="jobPreference2">
+  <input type="text" class="form-control" id="jobPreference2" ng-model="volunteerCtrl.jobPreference2">
 </div>
 <div class="form-group">
   <label for="membershipNumber">Membership Number:</label>
-  <input type="text" class="form-control" id="membershipNumber">
+  <input type="number" class="form-control" id="membershipNumber" ng-model="volunteerCtrl.membershipNumber">
 </div>
 <div class="form-group">
   <label for="problem">Problem:</label>
-  <input type="text" class="form-control" id="problem">
+  <input type="number" class="form-control" id="problem" ng-model="volunteerCtrl.problem">
 </div>
 <div class="form-group">
   <label for="division">Division:</label>
-  <input type="text" class="form-control" id="division">
+  <input type="number" class="form-control" id="division" ng-model="volunteerCtrl.division">
 </div>
 <div class="form-group">
   <label for="submitDate">Submit Date:</label>
-  <input type="text" class="form-control" id="submitDate">
+  <input type="text" class="form-control" id="submitDate" ng-model="volunteerCtrl.submitDate">
 </div>
 <div class="form-group">
   <label for="lastModified">Last Modified:</label>
-  <input type="text" class="form-control" id="lastModified">
+  <input type="text" class="form-control" id="lastModified" ng-model="volunteerCtrl.lastModified">
 </div>
 <div class="form-group">
   <label for="mName">Name of School:</label>
-  <input type="text" class="form-control" id="mName">
+  <input type="text" class="form-control" id="mName" ng-model="volunteerCtrl.mName">
 </div>
 <div class="form-group">
   <label for="mRegion">Region of School:</label>
-  <input type="text" class="form-control" id="mRegion">
+  <input type="text" class="form-control" id="mRegion" ng-model="volunteerCtrl.mRegion">
 </div>
 <div class="form-group">
   <label for="childTeam">Child's Team:</label>
-  <input type="text" class="form-control" id="childTeam">
+  <input type="text" class="form-control" id="childTeam" ng-model="volunteerCtrl.childTeam">
 </div>
 <div class="form-group">
   <label for="coachEmail">Coach's Email:</label>
-  <input type="text" class="form-control" id="coachEmail">
+  <input type="text" class="form-control" id="coachEmail" ng-model="volunteerCtrl.coachEmail">
 </div>
 <div class="form-group">
   <label for="coachName">Coach's Name:</label>
-  <input type="text" class="form-control" id="coachName">
+  <input type="text" class="form-control" id="coachName" ng-model="volunteerCtrl.coachName">
 </div>
 <div class="form-group">
   <label for="tshirtSize">Tee Shirt Size:</label>
-  <input type="text" class="form-control" id="tshirtSize">
+  <input type="text" class="form-control" id="tshirtSize" ng-model="volunteerCtrl.tshirtSize">
 </div>
 <div class="form-group">
   <label for="positionHeld">Position Held:</label>
-  <input type="text" class="form-control" id="positionHeld">
+  <input type="text" class="form-control" id="positionHeld" ng-model="volunteerCtrl.positionHeld">
 </div>
 <div class="form-group">
   <label for="comment">Comment:</label>
-  <input type="text" class="form-control" id="comment">
+  <input type="text" class="form-control" id="comment" ng-model="volunteerCtrl.comment">
 </div>
 <div class="checkbox">
-  <label><input type="checkbox" value="">Are they a judge?</label>
+  <label><input type="checkbox" value="" ng-model="volunteerCtrl.isJudge">Are they a judge?</label>
 </div>
 <button type="submit" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
