Adding "there are no..." for jobs, slots, volunteers

--- a/client/app/job/job-create.html
+++ b/client/app/job/job-create.html
@@ -15,4 +15,4 @@
       <button type="submit" ng-click="jobCtrl.createJob()" class="btn btn-default">Submit</button>
     </form>
   </div>
-</div>f.firstName.len
+</div>
