Updating error message for time slot addition

--- a/client/app/slot/slot-create.html
+++ b/client/app/slot/slot-create.html
@@ -6,7 +6,7 @@
   <div class="panel-body" ng-show="slotCtrl.canCreate()">
     Create a time slot here. You can assign a job to this time slot and how many volunteers are needed for this.<br /><br />
     <div ng-show="slotCtrl.isSuccess()">You have successfully entered a time slot.<br /><br /></div>
-    {{ slotCtrl.errorMessage }}
+    <div ng-show="slotCtrl.isError()">You must fill out all of the required fields.<br /><br /></div>
     <form>
       <div class="form-group">
         <label for="jobtitle">Job Title</label><br />
