Updating styling of create a volunteer page to match the site

--- a/client/app/volunteer/volunteer-create.html
+++ b/client/app/volunteer/volunteer-create.html
@@ -1,3 +1,6 @@
+<div class="panel panel-default job-container">
+  <div class="panel-heading">Create a volunteer:</div>
+  <div class="panel-body">
 <div class="form-group">
   <label for="firstName">First Name:</label>
   <input type="text" class="form-control" id="firstName" align="right" ng-model="volunteerCtrl.firstName">
@@ -142,3 +145,4 @@
   <label><input type="checkbox" value="" ng-model="volunteerCtrl.isJudge">Are they a judge?</label>
 </div>
 <button type="submit" ng-click="volunteerCtrl.addVolunteer()" name="submit">Submit</button>
+</div></div>
