--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -4,7 +4,7 @@
   </div>
   <div class="list-group">
     <div class="list-group-item" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
-    <a ng-href="" class="list-group-item" ng-repeat="slot in slotCtrl.data">
+    <a ng-href="/slots/{{slot._id}}" class="list-group-item" ng-repeat="slot in slotCtrl.data">
       <strong>Job title</strong>: {{ slotCtrl.getJobTitle(slot.jobID) }} <br />
       <strong>Start time</strong>: {{ slot.start }} <br />
       <strong>End time</strong>: {{ slot.end }} <br />
