--- a/client/index.html
+++ b/client/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/slot/slot.css">
       <link rel="stylesheet" href="app/upload/upload.css">
+      <link rel="stylesheet" href="app/viewer/viewer.css">
       <link rel="stylesheet" href="app/volunteer/volunteer.css">
       <link rel="stylesheet" href="components/footer/footer.css">
       <link rel="stylesheet" href="components/modal/modal.css">
@@ -79,7 +80,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/upload/upload.controller.js"></script>
+      <script src="app/upload/upload.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -96,8 +97,10 @@
       <script src="app/upload/Upload.service.js"></script>
       <script src="app/upload/papaparse.js"></script>
       <script src="app/upload/papaparse.min.js"></script>
+      <script src="app/upload/upload.controller.js"></script>
       <script src="app/account/login/login.controller.js"></script>
-      <script src="app/upload/upload.js"></script>
+      <script src="app/viewer/viewer.controller.js"></script>
+      <script src="app/viewer/viewer.js"></script>
       <script src="app/volunteer/Volunteer.service.js"></script>
       <script src="app/volunteer/volunteer.controller.js"></script>
       <script src="app/volunteer/volunteer.js"></script>
