--- a/client/app/viewer/viewer-detail.html
+++ b/client/app/viewer/viewer-detail.html
@@ -3,6 +3,7 @@
     <div class="panel-heading">Volunteer Schedule:
       <div class="pull-right"><a href="/viewer">Back to volunteer list</a></div></div>
     {{ viewerCtrl.volunteer.firstName }} {{ viewerCtrl.volunteer.lastName }}
+    <br/> {{ viewerCtrl.volunteer.slots }}
 
 
   </div>
