--- a/client/app/viewer/viewer.html
+++ b/client/app/viewer/viewer.html
@@ -1,7 +1,7 @@
-<h4 class="page-header"> Search volunteers to view their schedule!</h4>
-<div class="form-group">
-  <input type="search" ng-model="search.firstName" placeholder="filter volunteer by first name" aria-label="filter volunteer" />
-  <input type="search" ng-model="search.lastName" placeholder="filter volunteer by last name" aria-label="filter volunteer" />
+<h4 class="page-header, text-center"> Search volunteers to view their schedule!</h4>
+<div class="form-group, volunteer-container">
+  <input type="search" ng-model="search.firstName" placeholder="filter volunteer by first name" aria-label="filter volunteer" class="filtering"/>
+  <input type="search" ng-model="search.lastName" placeholder="filter volunteer by last name" aria-label="filter volunteer" class="filtering" />
   </div>
 <div class="panel panel-default volunteer-container">
   <div class="panel-heading">List of all volunteers:
