--- a/client/app/slot/slot.html
+++ b/client/app/slot/slot.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default slot-container">
   <div class="panel-heading">List of all time slots:
-    <div class="pull-right"><a href="/slot/create">Add a time slot</a></div>
+    <div class="pull-right"><a href="/slots/create">Add a time slot</a></div>
   </div>
   <div class="list-group">
     <div class="list-group-item" ng-hide="slotCtrl.areThereSlots()">There are currently no time slots entered.</div>
