--- a/client/app/viewer/viewer-detail.html
+++ b/client/app/viewer/viewer-detail.html
@@ -1,9 +1,8 @@
 <div class="volunteer-container">
   <div class="panel panel-default">
-    <div class="panel-heading">Volunteer Schedule:
+    <div class="panel-heading">Volunteer Schedule: {{ viewerCtrl.volunteer.firstName }} {{ viewerCtrl.volunteer.lastName }}
       <div class="pull-right"><a href="/viewer">Back to volunteer list</a></div></div>
-    {{ viewerCtrl.volunteer.firstName }} {{ viewerCtrl.volunteer.lastName }}
-    <br/> {{ viewerCtrl.volunteer.slots }}
+    {{ viewerCtrl.volunteer.slots }}
 
 
   </div>
